[gd_scene load_steps=19 format=2]

[ext_resource path="res://GameManager.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Fondo/Nebula Blue.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Fondo/Stars Small_1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/FloorTreadPattern-3v2_UR_1024.png" type="Texture" id=4]
[ext_resource path="res://Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://aparecer.shader" type="Shader" id=7]
[ext_resource path="res://Font/E-SQUARE_demo.otf" type="DynamicFontData" id=8]
[ext_resource path="res://winnerText.gd" type="Script" id=9]
[ext_resource path="res://joystick.tscn" type="PackedScene" id=10]
[ext_resource path="res://sounds/lvl1_[levelclearer].ogg" type="AudioStream" id=11]
[ext_resource path="res://sounds/sfx_hit_[motion-s].wav" type="AudioStream" id=12]
[ext_resource path="res://Menu/BackButton.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 568.252, 283.762 )

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.0
bounce = 5000.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 7 )
shader_param/alpha = null

[sub_resource type="PhysicsMaterial" id=4]
friction = 0.0
bounce = 5000.0

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 8 )

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Nebula Blue" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 657.741, 544.404 )
scale = Vector2( 0.326678, 0.326678 )
texture = ExtResource( 2 )

[node name="Stars Small_1" type="Sprite" parent="Nebula Blue"]
position = Vector2( -152.407, -72.5609 )
texture = ExtResource( 3 )

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 644.815, 353.59 )
scale = Vector2( 0.679999, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2.72998, -2.9458 )
shape = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="Area2D"]
margin_left = -567.0
margin_top = -284.0
margin_right = 565.0
margin_bottom = 279.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="PlayerPosition" type="Position2D" parent="."]
position = Vector2( 354.283, 362.425 )

[node name="EnemyPosition" type="Position2D" parent="."]
position = Vector2( 958.235, 354.367 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 354.368, 356.676 )
mode = 2
physics_material_override = SubResource( 2 )
right = "D"
left = "A"
down = "S"
up = "W"
dash = "ui_select"

[node name="TimerPJ" type="Timer" parent="Player"]
wait_time = 0.5
one_shot = true

[node name="Enemy" parent="." instance=ExtResource( 6 )]
material = SubResource( 3 )
position = Vector2( 959.485, 351.497 )
mode = 2
physics_material_override = SubResource( 4 )

[node name="TimerP2" type="Timer" parent="Enemy"]
wait_time = 0.5
one_shot = true

[node name="WinnerText" type="Label" parent="."]
anchor_right = 1.0
margin_top = 150.357
margin_bottom = 225.357
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
script = ExtResource( 9 )

[node name="StarText" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -37.5
margin_right = 640.0
margin_bottom = 37.5
custom_fonts/font = SubResource( 5 )
text = "READY?"
align = 1
valign = 1

[node name="joystick" parent="." instance=ExtResource( 10 )]
position = Vector2( 107.826, 362.166 )

[node name="joystick2" parent="." instance=ExtResource( 10 )]
position = Vector2( 1163.48, 359.07 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="BackButton" parent="." instance=ExtResource( 13 )]
margin_left = 41.0
margin_top = 4.0
margin_right = 141.0
margin_bottom = 64.0
script = null
[connection signal="body_exited" from="Area2D" to="Player" method="_on_Area2D_body_exited"]
[connection signal="body_exited" from="Area2D" to="Enemy" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Player" to="Player" method="_on_Player_body_entered"]
[connection signal="p1_die" from="Player" to="WinnerText" method="_on_Player_p1_die"]
[connection signal="timeout" from="Player/TimerPJ" to="Player" method="_on_TimerPJ_timeout"]
[connection signal="p2_die" from="Enemy" to="WinnerText" method="_on_Enemy_p2_die"]
[connection signal="timeout" from="Enemy/TimerP2" to="Enemy" method="_on_TimerP2_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
